<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adam">

    <EditText
        android:id="@+id/yearText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="Enter Year"
        android:textColorHint="@color/black"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistText" />

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/selectimage" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/artistText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artImageView" />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Artist Name"
        android:textColorHint="@color/black"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/yearText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="119dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/yearText"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />
</androidx.constraintlayout.widget.ConstraintLayout>